force-app/main/default/objects/Shoe__c/Shoe__c.object-meta.xml
<CustomObject>
    <label>Shoe</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shoes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>