force-app/main/default/objects/Shoe__c/fields/Account_Bought_From__c.field-meta.xml
<CustomField>
    <fullName>Account_Bought_From__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Bought From</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Business_Relationship__c</field>
            <operation>equals</operation>
            <value>Supplier, Customer and Supplier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shoes Supplied</relationshipLabel>
    <relationshipName>ShoesSupplied</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>