force-app/main/default/objects/Shoe__c/fields/Account_Sold_To__c.field-meta.xml
<CustomField>
    <fullName>Account_Sold_To__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Sold To</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Account does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Account.Business_Relationship__c</field>
            <operation>equals</operation>
            <value>Customer, Customer and Supplier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shoes Bought</relationshipLabel>
    <relationshipName>ShoesBought</relationshipName>
    <type>Lookup</type>
</CustomField>