force-app/main/default/objects/Shoe__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Addidas</fullName>
            </value>
            <value>
                <fullName>Nike</fullName>
            </value>
            <value>
                <fullName>New Balance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>