force-app/main/default/objects/Shoe__c/fields/Buy_Amount__c.field-meta.xml
<CustomField>
    <fullName>Buy_Amount__c</fullName>
    <label>Buy Amount</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>