force-app/main/default/objects/Shoe__c/fields/Buy_Date__c.field-meta.xml
<CustomField>
    <fullName>Buy_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Buy Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>