force-app/main/default/objects/Shoe__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Men&apos;s</fullName>
            </value>
            <value>
                <fullName>Women&apos;s</fullName>
            </value>
            <value>
                <fullName>Boy&apos;s</fullName>
            </value>
            <value>
                <fullName>Girl&apos;s</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>