force-app/main/default/objects/Shoe__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <label>Color</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Model__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nike Blue</fullName>
            </value>
            <value>
                <fullName>Nike Red</fullName>
            </value>
            <value>
                <fullName>Nike green 2</fullName>
            </value>
            <value>
                <fullName>Nkie green 4</fullName>
            </value>
            <value>
                <fullName>Addidas Blue</fullName>
            </value>
            <value>
                <fullName>Addidas Red</fullName>
            </value>
            <value>
                <fullName>Addidas Green 2</fullName>
            </value>
            <value>
                <fullName>Addidas Greed 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>