force-app/main/default/objects/Shoe__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Model 1 N</fullName>
            </value>
            <value>
                <fullName>Model 2 N</fullName>
            </value>
            <value>
                <fullName>Model 3 N</fullName>
            </value>
            <value>
                <fullName>Model 1 Add</fullName>
            </value>
            <value>
                <fullName>Model 2 Add</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>