force-app/main/default/objects/Shoe__c/fields/Profit__c.field-meta.xml
<CustomField>
    <fullName>Profit__c</fullName>
    <formula>IF( ISPICKVAL( Status__c , &quot;Closed - Returned&quot;) , 
       0 , 
       Sell_Amount__c - Buy_Amount__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>