force-app/main/default/objects/Shoe__c/fields/Sell_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sell_Amount__c</fullName>
    <label>Sell Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>