force-app/main/default/objects/Shoe__c/fields/Sell_Date__c.field-meta.xml
<CustomField>
    <fullName>Sell_Date__c</fullName>
    <label>Sell Date</label>
    <type>Date</type>
</CustomField>