force-app/main/default/objects/Shoe__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Classification__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5.0 M</fullName>
            </value>
            <value>
                <fullName>5.5 M</fullName>
            </value>
            <value>
                <fullName>6.0 M</fullName>
            </value>
            <value>
                <fullName>6.5 M</fullName>
            </value>
            <value>
                <fullName>7.0 M</fullName>
            </value>
            <value>
                <fullName>7.5 M</fullName>
            </value>
            <value>
                <fullName>8.0 M</fullName>
            </value>
            <value>
                <fullName>8.5 M</fullName>
            </value>
            <value>
                <fullName>9.0 M</fullName>
            </value>
            <value>
                <fullName>9.5 M</fullName>
            </value>
            <value>
                <fullName>10.0 M</fullName>
            </value>
            <value>
                <fullName>10.5 M</fullName>
            </value>
            <value>
                <fullName>11.0 M</fullName>
            </value>
            <value>
                <fullName>11.5 M</fullName>
            </value>
            <value>
                <fullName>12.0 M</fullName>
            </value>
            <value>
                <fullName>12.5 M</fullName>
            </value>
            <value>
                <fullName>13.5 M</fullName>
            </value>
            <value>
                <fullName>14.0 M</fullName>
            </value>
            <value>
                <fullName>14.5 M</fullName>
            </value>
            <value>
                <fullName>15.0 M</fullName>
            </value>
            <value>
                <fullName>5.0 W</fullName>
            </value>
            <value>
                <fullName>5.5 W</fullName>
            </value>
            <value>
                <fullName>6.0 W</fullName>
            </value>
            <value>
                <fullName>6.5 W</fullName>
            </value>
            <value>
                <fullName>7.0 W</fullName>
            </value>
            <value>
                <fullName>7.5 W</fullName>
            </value>
            <value>
                <fullName>8.0 W</fullName>
            </value>
            <value>
                <fullName>8.5 W</fullName>
            </value>
            <value>
                <fullName>9.0 W</fullName>
            </value>
            <value>
                <fullName>9.5 W</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>