force-app/main/default/objects/Shoe__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bought - Pending Sale</fullName>
            </value>
            <value>
                <fullName>Closed - Scammed</fullName>
            </value>
            <value>
                <fullName>Closed - Returned</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>