force-app/main/default/objects/Shoe__c/fields/System_Delete__c.field-meta.xml
<CustomField>
    <fullName>System_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System Delete</label>
    <type>Checkbox</type>
</CustomField>