force-app/main/default/objects/Shoe__c/validationRules/Accouont_Sold_To_Status_Not_Sold.validationRule-meta.xml
<ValidationRule>
    <fullName>Accouont_Sold_To_Status_Not_Sold</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  OR( ISPICKVAL(Status__c, &quot;Bought - Pending Sale&quot;), 
          ISPICKVAL(Status__c, &quot;Closed - Scammed&quot;),
          ISPICKVAL(Status__c, &quot;Closed - Returned&quot;)
         ), 
       NOT(ISBLANK( Account_Sold_To__c )) 
)</errorConditionFormula>
    <errorDisplayField>Account_Sold_To__c</errorDisplayField>
    <errorMessage>Must be blank when Status selected is Bought, Scammed, or Returned.</errorMessage>
</ValidationRule>