force-app/main/default/objects/Shoe__c/validationRules/Accouont_Sold_To_Status_Sold.validationRule-meta.xml
<ValidationRule>
    <fullName>Accouont_Sold_To_Status_Sold</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(Status__c, &quot;Sold&quot;), ISBLANK(  Account_Sold_To__c ))</errorConditionFormula>
    <errorDisplayField>Account_Sold_To__c</errorDisplayField>
    <errorMessage>Cannot be blank when Status selected is Sold.</errorMessage>
</ValidationRule>