force-app/main/default/objects/Shoe__c/validationRules/Buy_Date_Sell_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Buy_Date_Sell_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(Status__c, &quot;Sold&quot;), Sell_Date__c &lt; Buy_Date__c )</errorConditionFormula>
    <errorDisplayField>Sell_Date__c</errorDisplayField>
    <errorMessage>Sell Date cannot be before Buy Date.</errorMessage>
</ValidationRule>