force-app/main/default/objects/Shoe__c/validationRules/Sell_Amount_Status_Sold.validationRule-meta.xml
<ValidationRule>
    <fullName>Sell_Amount_Status_Sold</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(Status__c, &quot;Sold&quot;), ISBLANK(   Sell_Amount__c ))</errorConditionFormula>
    <errorDisplayField>Sell_Amount__c</errorDisplayField>
    <errorMessage>Cannot be blank when Status selected is Sold.</errorMessage>
</ValidationRule>