force-app/main/default/objects/Shoe__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Model__c</columns>
    <columns>Color__c</columns>
    <columns>Buy_Amount__c</columns>
    <columns>Buy_Date__c</columns>
    <columns>Sell_Amount__c</columns>
    <columns>Sell_Date__c</columns>
    <columns>Profit__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>